updated tooling files

--- a/.jscsrc
+++ b/.jscsrc
@@ -80,7 +80,6 @@
     "checkRedundantAccess": "enforceLeadingUnderscore",
     "leadingUnderscoreAccess": true,
     "requireHyphenBeforeDescription": true,
-    "requireNewlineAfterDescription": true,
-    "requireParamDescription": true
+    "requireNewlineAfterDescription": true
   }
 }
