--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "build": "jshint . --verbose && jscs . --verbose",
     "test": "mocha --bail --recursive tests",
-    "upgrade": "npm-check-updates -u && npm update",
+    "upgrade": "ncu -u && npm update",
     "bump": "bump --prompt --tag --push --all",
     "release": "npm run upgrade && npm run build && npm test && npm run bump && npm publish"
   },
@@ -35,15 +35,16 @@
     "url": "https://github.com/BigstickCarpet/simplifyify.git"
   },
   "devDependencies": {
-    "chai": "^3.2.0",
-    "del": "^1.2.0",
     "istanbul": "^0.3.17",
+    "coveralls": "^2.11.2",
+    "mocha": "^2.2.5",
+    "chai": "^3.2.0",
+    "sinon": "^1.15.4",
     "jscs": "^2.0.0",
     "jshint": "^2.8.0",
-    "mocha": "^2.2.5",
     "npm-check-updates": "^2.0.1",
-    "sinon": "^1.15.4",
-    "version-bump-prompt": "^1.4.1"
+    "version-bump-prompt": "^1.4.1",
+    "del": "^1.2.0"
   },
   "dependencies": {
     "browserify": "^11.0.0",
