--- a/.jscsrc
+++ b/.jscsrc
@@ -81,6 +81,7 @@
     "checkRedundantAccess": "enforceLeadingUnderscore",
     "leadingUnderscoreAccess": true,
     "requireHyphenBeforeDescription": true,
-    "requireNewlineAfterDescription": true
+    "requireNewlineAfterDescription": true,
+    "requireParamDescription": true
   }
 }
