--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
   "scripts": {
     "lint": "jshint . --verbose && jscs . --verbose",
     "build": "npm run lint",
-    "test": "mocha --bail --recursive tests",
-    "upgrade": "ncu -u && npm update",
+    "test": "istanbul cover _mocha -- --bail --recursive tests",
+    "mocha": "mocha --bail --recursive tests",
+    "upgrade": "ncu --upgradeAll && npm update",
     "bump": "bump --prompt --tag --push --all",
     "release": "npm run upgrade && npm run build && npm test && npm run bump && npm publish"
   },
@@ -37,18 +38,18 @@
   },
   "devDependencies": {
     "istanbul": "^0.3.17",
-    "coveralls": "^2.11.2",
+    "coveralls": "^2.11.3",
     "mocha": "^2.2.5",
     "chai": "^3.2.0",
     "sinon": "^1.15.4",
     "jscs": "^2.0.0",
     "jshint": "^2.8.0",
-    "npm-check-updates": "^2.0.1",
-    "version-bump-prompt": "^1.4.1",
+    "npm-check-updates": "^2.2.0",
+    "version-bump-prompt": "^1.5.0",
     "del": "^1.2.0"
   },
   "dependencies": {
-    "browserify": "^11.0.0",
+    "browserify": "^11.0.1",
     "browserify-istanbul": "^0.2.1",
     "commander": "^2.8.1",
     "exorcist": "^0.4.0",
@@ -56,7 +57,7 @@
     "mkdirp": "^0.5.1",
     "touch": "^1.0.0",
     "uglifyify": "^3.0.1",
-    "watchify": "^3.3.0"
+    "watchify": "^3.3.1"
   },
   "bin": {
     "simplifyify": "bin/simplifyify.js"
