--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "lint": "eslint lib && jscs lib --verbose",
     "build": "npm run lint",
     "mocha": "mocha --bail --recursive tests/fixtures tests/specs",
-    "istanbul": "istanbul cover _mocha --dir coverage/node -- --bail --recursive tests/fixtures tests/specs",
-    "test": "npm run istanbul",
+    "test": "npm run mocha",
     "upgrade": "ncu --upgradeAll && npm update",
     "bump": "bump --prompt --tag --push --all",
     "release": "npm run upgrade && npm run build && npm test && npm run bump && npm publish"
@@ -38,27 +37,26 @@
     "url": "https://github.com/BigstickCarpet/simplifyify.git"
   },
   "devDependencies": {
-    "istanbul": "^0.4.0",
-    "coveralls": "^2.11.4",
-    "mocha": "^2.3.3",
+    "coveralls": "^2.11.6",
+    "mocha": "^2.3.4",
     "chai": "^3.4.1",
     "sinon": "^1.17.2",
-    "jscs": "^2.5.1",
-    "eslint": "^1.9.0",
-    "npm-check-updates": "^2.4.1",
+    "jscs": "^2.7.0",
+    "eslint": "^1.10.3",
+    "npm-check-updates": "^2.5.5",
     "version-bump-prompt": "^1.5.2",
-    "del": "^2.0.2"
+    "del": "^2.2.0"
   },
   "dependencies": {
     "browserify": "^12.0.1",
     "browserify-istanbul": "^0.2.1",
     "commander": "^2.9.0",
     "exorcist": "^0.4.0",
-    "glob": "^5.0.15",
+    "glob": "^6.0.2",
     "mkdirp": "^0.5.1",
     "touch": "^1.0.0",
     "uglifyify": "^3.0.1",
-    "watchify": "^3.6.0"
+    "watchify": "^3.6.1"
   },
   "bin": {
     "simplifyify": "bin/simplifyify.js"
