--- a/package.json
+++ b/package.json
@@ -37,15 +37,15 @@
     "url": "https://github.com/BigstickCarpet/simplifyify.git"
   },
   "devDependencies": {
-    "coveralls": "^2.11.6",
-    "mocha": "^2.3.4",
     "chai": "^3.4.1",
-    "sinon": "^1.17.2",
-    "jscs": "^2.7.0",
+    "coveralls": "^2.11.6",
+    "del": "^2.2.0",
     "eslint": "^1.10.3",
+    "jscs": "^2.7.0",
+    "mocha": "^2.3.4",
     "npm-check-updates": "^2.5.5",
-    "version-bump-prompt": "^1.5.2",
-    "del": "^2.2.0"
+    "sinon": "^1.17.2",
+    "version-bump-prompt": "^1.5.2"
   },
   "dependencies": {
     "browserify": "^12.0.1",
