--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simplifyify",
-  "version": "1.6.0",
+  "version": "2.0.0-beta.0",
   "description": "A simplified Browserify and Watchify CLI",
   "keywords": [
     "browserify",
@@ -37,6 +37,7 @@
     "url": "https://github.com/BigstickCarpet/simplifyify.git"
   },
   "devDependencies": {
+    "babelify": "^7.2.0",
     "chai": "^3.4.1",
     "coveralls": "^2.11.6",
     "del": "^2.2.0",
