--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "url": "https://github.com/BigstickCarpet/simplifyify.git"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
     "chai": "^3.4.1",
     "coveralls": "^2.11.6",
@@ -55,6 +56,7 @@
     "exorcist": "^0.4.0",
     "glob": "^6.0.2",
     "mkdirp": "^0.5.1",
+    "ono": "^2.0.1",
     "touch": "^1.0.0",
     "uglifyify": "^3.0.1",
     "watchify": "^3.6.1"
