--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simplifyify",
-  "version": "2.0.0-beta.0",
+  "version": "2.0.0",
   "description": "A simplified Browserify and Watchify CLI",
   "keywords": [
     "browserify",
