--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ matrix:
     - node_js: 0.12
     - node_js: 4
     - node_js: 5
+    - node_js: 6
+
 branches:
   only:
     - master            # only run CI on the master branch
