--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,7 @@ environment:
     - nodejs_version: "0.12"
     - nodejs_version: "4"
     - nodejs_version: "5"
+    - nodejs_version: "6"
 
 skip_tags: true
 
@@ -17,6 +18,7 @@ test_script:
   # Output useful info for debugging.
   - node --version
   - npm --version
+
   # run tests
   - npm run mocha
 
