--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "build": "npm run lint",
     "mocha": "mocha --bail --recursive tests/fixtures tests/specs",
     "test": "npm run mocha",
-    "upgrade": "ncu --upgradeAll && npm update",
+    "upgrade": "npm-check -u",
     "bump": "bump --prompt --tag --push --all",
     "release": "npm run upgrade && npm run build && npm test && npm run bump && npm publish"
   },
@@ -37,29 +37,29 @@
     "url": "https://github.com/BigstickCarpet/simplifyify.git"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.3.13",
-    "babelify": "^7.2.0",
-    "chai": "^3.4.1",
-    "coveralls": "^2.11.6",
-    "del": "^2.2.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babelify": "^7.3.0",
+    "chai": "^3.5.0",
+    "coveralls": "^2.11.12",
+    "del": "^2.2.2",
     "eslint": "^1.10.3",
     "jscs": "^2.7.0",
-    "mocha": "^2.3.4",
-    "npm-check-updates": "^2.5.5",
-    "sinon": "^1.17.2",
+    "mocha": "^3.0.2",
+    "npm-check": "^5.2.3",
+    "sinon": "^1.17.5",
     "version-bump-prompt": "^1.5.2"
   },
   "dependencies": {
-    "browserify": "^12.0.1",
-    "browserify-istanbul": "^0.2.1",
+    "browserify": "^13.1.0",
+    "browserify-istanbul": "^2.0.0",
     "commander": "^2.9.0",
     "exorcist": "^0.4.0",
-    "glob": "^6.0.3",
+    "glob": "^7.0.6",
     "mkdirp": "^0.5.1",
-    "ono": "^2.0.1",
+    "ono": "^2.2.1",
     "touch": "^1.0.0",
-    "uglifyify": "^3.0.1",
-    "watchify": "^3.6.1"
+    "uglifyify": "^3.0.2",
+    "watchify": "^3.7.0"
   },
   "bin": {
     "simplifyify": "bin/simplifyify.js"
