--- a/package.json
+++ b/package.json
@@ -37,29 +37,29 @@
     "url": "https://github.com/BigstickCarpet/simplifyify.git"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-es2015": "^6.18.0",
     "babelify": "^7.3.0",
     "chai": "^3.5.0",
-    "coveralls": "^2.11.12",
+    "codacy-coverage": "^2.0.0",
+    "coveralls": "^2.11.14",
     "del": "^2.2.2",
-    "eslint": "^1.10.3",
-    "jscs": "^2.7.0",
-    "mocha": "^3.0.2",
-    "npm-check": "^5.2.3",
-    "sinon": "^1.17.5",
-    "version-bump-prompt": "^1.6.3"
+    "eslint": "^3.9.0",
+    "eslint-config-modular": "^1.0.1",
+    "mocha": "^3.1.2",
+    "npm-check": "^5.4.0",
+    "version-bump-prompt": "^1.7.2"
   },
   "dependencies": {
-    "browserify": "^13.1.0",
+    "browserify": "^13.1.1",
     "browserify-istanbul": "^2.0.0",
     "commander": "^2.9.0",
     "exorcist": "^0.4.0",
-    "glob": "^7.0.6",
+    "glob": "^7.1.1",
     "istanbul": "^0.4.5",
     "mkdirp": "^0.5.1",
     "ono": "^2.2.1",
     "touch": "^1.0.0",
-    "uglifyify": "^3.0.2",
+    "uglifyify": "^3.0.4",
     "watchify": "^3.7.0"
   },
   "bin": {
