Moved mocha options to test/mocha.opts

--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
   "scripts": {
     "lint": "eslint lib test --fix",
     "build": "npm run lint",
-    "mocha": "mocha --bail --recursive test/fixtures test/specs",
-    "test": "npm run mocha",
+    "test": "mocha",
     "upgrade": "npm-check -u",
     "bump": "bump --prompt --tag --push --all",
     "release": "npm run upgrade && npm run build && npm test && npm run bump && npm publish"
