--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,17 @@
 # Travis CI config
 # http://docs.travis-ci.com/user/languages/javascript-with-nodejs/
+# https://docs.travis-ci.com/user/customizing-the-build/
+# https://docs.travis-ci.com/user/migrating-from-legacy/
 
 sudo: false
 language: node_js
 matrix:
   include:
-    - node_js: 0.12
     - node_js: 4
     - node_js: 5
     - node_js: 6
+    - node_js: 7
+
+script:
+  - npm run lint
+  - npm test
