--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,10 +3,10 @@
 
 environment:
   matrix:
-    - nodejs_version: "0.12"
     - nodejs_version: "4"
     - nodejs_version: "5"
     - nodejs_version: "6"
+    - nodejs_version: "7"
 
 skip_tags: true
 
@@ -20,7 +20,8 @@ test_script:
   - npm --version
 
   # run tests
-  - npm run mocha
+  - npm run lint
+  - npm test
 
 # Don't run MSBuild
 build: off
