added links to ESLint config options

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,3 +1,7 @@
+# ESLint config
+# http://eslint.org/docs/user-guide/configuring
+# https://github.com/BigstickCarpet/eslint-config-modular
+
 extends:
   - modular/best-practices
   - modular/style
