--- a/package.json
+++ b/package.json
@@ -29,11 +29,10 @@
   ],
   "scripts": {
     "lint": "eslint bin lib test/fixtures test/specs --fix",
-    "build": "npm run lint",
     "test": "mocha",
     "upgrade": "npm-check -u",
     "bump": "bump --prompt --tag --push --all",
-    "release": "npm run upgrade && npm run build && npm test && npm run bump && npm publish"
+    "release": "npm run upgrade && npm run lint && npm test && npm run bump && npm publish"
   },
   "repository": {
     "type": "git",
