--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   "license": "MIT",
   "homepage": "https://github.com/BigstickCarpet/simplifyify",
   "main": "lib/index.js",
+  "bin": {
+    "simplifyify": "bin/simplifyify.js"
+  },
   "files": [
     "bin",
     "lib"
@@ -64,7 +67,7 @@
     "uglifyify": "^3.0.4",
     "watchify": "^3.7.0"
   },
-  "bin": {
-    "simplifyify": "bin/simplifyify.js"
+  "engines": {
+    "node": ">=4"
   }
 }
