--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
   ],
   "scripts": {
     "lint": "eslint bin lib test/fixtures test/specs --fix",
-    "test": "mocha",
+    "test": "mocha && npm run lint",
     "upgrade": "npm-check -u",
     "bump": "bump --prompt --tag --push --all",
-    "release": "npm run upgrade && npm run lint && npm test && npm run bump && npm publish"
+    "release": "npm run upgrade && npm test && npm run bump && npm publish"
   },
   "repository": {
     "type": "git",
