--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   ],
   "author": {
     "name": "James Messinger",
-    "url": "http://jamesmessinger.com"
+    "url": "http://bigstickcarpet.com"
   },
   "homepage": "https://github.com/BigstickCarpet/simplifyify",
   "repository": {
