--- a/package.json
+++ b/package.json
@@ -34,23 +34,15 @@
     "bin",
     "lib"
   ],
+  "engines": {
+    "node": ">=4"
+  },
   "scripts": {
     "lint": "eslint bin lib test/fixtures test/specs --fix",
     "test": "mocha && npm run lint",
     "upgrade": "npm-check -u",
     "bump": "bump --prompt --tag --push --all",
     "release": "npm run upgrade && npm test && npm run bump && npm publish"
-  },
-  "devDependencies": {
-    "babel-preset-es2015": "^6.18.0",
-    "babelify": "^7.3.0",
-    "chai": "^4.1.2",
-    "del": "^3.0.0",
-    "eslint": "^4.15.0",
-    "eslint-config-modular": "^4.1.1",
-    "mocha": "^4.1.0",
-    "npm-check": "^5.5.2",
-    "version-bump-prompt": "^4.0.0"
   },
   "dependencies": {
     "browserify": "^15.0.0",
@@ -67,7 +59,16 @@
     "uglifyify": "^3.0.4",
     "watchify": "^3.8.0"
   },
-  "engines": {
-    "node": ">=4"
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babelify": "^8.0.0",
+    "chai": "^4.1.2",
+    "del": "^3.0.0",
+    "eslint": "^4.15.0",
+    "eslint-config-modular": "^4.1.1",
+    "mocha": "^4.1.0",
+    "npm-check": "^5.5.2",
+    "version-bump-prompt": "^4.0.0"
   }
 }
