--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "mkdirp": "^0.5.1",
     "ono": "^4.0.2",
     "touch": "^3.1.0",
-    "uglify-js": "^2.8.29",
-    "uglifyify": "^3.0.4",
+    "uglify-es": "^3.3.7",
+    "uglifyify": "^4.0.5",
     "watchify": "^3.8.0"
   },
   "devDependencies": {
