--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,12 @@ matrix:
     - node_js: 8
 
 script:
-  - npm test
+  - npm run cover
+  - npm run lint
+
+after_success:
+  # send code-coverage data to Codacy
+  - cat ./coverage/lcov.info | node_modules/.bin/codacy-coverage -p .
+
+  # send code-coverage data to Coveralls
+  - cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js
