--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "scripts": {
     "lint": "eslint bin lib test/fixtures test/specs --fix",
     "test": "mocha && npm run lint",
+    "cover": "nyc --reporter=text --reporter=lcov mocha",
     "upgrade": "npm-check -u",
     "bump": "bump --prompt --tag --push --all",
     "release": "npm run upgrade && npm test && npm run bump && npm publish"
@@ -63,11 +64,14 @@
     "babel-preset-es2015": "^6.18.0",
     "babelify": "^8.0.0",
     "chai": "^4.1.2",
+    "codacy-coverage": "^2.0.3",
+    "coveralls": "^3.0.0",
     "del": "^3.0.0",
     "eslint": "^4.15.0",
     "eslint-config-modular": "^4.1.1",
     "mocha": "^4.1.0",
     "npm-check": "^5.5.2",
+    "nyc": "^11.4.1",
     "version-bump-prompt": "^4.0.0"
   }
 }
