--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ matrix:
     - node_js: 6
     - node_js: 7
     - node_js: 8
+    - node_js: node   # latest version
 
 script:
   - npm run cover
