--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "watchify": "^3.8.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.18.0",
+    "@babel/core": "^7.0.1",
+    "@babel/preset-env": "^7.0.0",
     "babelify": "^10.0.0",
     "chai": "^4.1.2",
     "codacy-coverage": "^3.0.0",
