--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "mkdirp": "^0.5.1",
     "ono": "^4.0.8",
     "touch": "^3.1.0",
+    "tsify": "^4.0.0",
     "uglify-es": "^3.3.7",
     "uglifyify": "^5.0.1",
     "watchify": "^3.8.0"
@@ -62,6 +63,8 @@
   "devDependencies": {
     "@babel/core": "^7.0.1",
     "@babel/preset-env": "^7.0.0",
+    "@types/react": "^16.4.14",
+    "@types/react-dom": "^16.0.7",
     "babelify": "^10.0.0",
     "chai": "^4.1.2",
     "codacy-coverage": "^3.0.0",
@@ -72,6 +75,12 @@
     "mocha": "^5.2.0",
     "npm-check": "^5.8.0",
     "nyc": "^13.0.1",
+    "react": "^16.5.1",
+    "react-dom": "^16.5.1",
+    "typescript": "^3.0.3",
     "version-bump-prompt": "^4.1.0"
+  },
+  "peerDependencies": {
+    "typescript": "*"
   }
 }
