--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
   ],
   "author": {
     "name": "James Messinger",
-    "url": "http://bigstickcarpet.com"
+    "url": "https://jamesmessinger.com"
   },
-  "homepage": "https://github.com/BigstickCarpet/simplifyify",
+  "homepage": "https://github.com/James-Messinger/simplifyify",
   "repository": {
     "type": "git",
-    "url": "https://github.com/BigstickCarpet/simplifyify.git"
+    "url": "https://github.com/James-Messinger/simplifyify.git"
   },
   "license": "MIT",
   "main": "lib/index.js",
