Replaced the `--test` argument with `--coverage`

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "scripts": {
     "lint": "eslint bin lib test/fixtures test/specs --fix",
     "test": "mocha && npm run lint",
-    "cover": "nyc --reporter=text --reporter=lcov mocha",
+    "coverage": "nyc --reporter=text --reporter=lcov mocha",
     "upgrade": "npm-check -u",
     "bump": "bump --prompt --tag --push --all",
     "release": "npm run upgrade && npm test && npm run bump && npm publish"
