--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,10 @@
 # https://docs.travis-ci.com/user/customizing-the-build/
 # https://docs.travis-ci.com/user/migrating-from-legacy/
 
+dist: trusty
 sudo: false
 language: node_js
+
 matrix:
   include:
     - node_js: 6
