--- a/package.json
+++ b/package.json
@@ -51,10 +51,9 @@
     "browserify-istanbul": "^3.0.1",
     "commander": "^2.18.0",
     "exorcist": "^1.0.0",
-    "glob": "^7.1.3",
-    "mkdirp": "^0.5.1",
+    "globby": "^8.0.1",
+    "mkdirp-promise": "^5.0.1",
     "ono": "^4.0.9",
-    "touch": "^3.1.0",
     "tsify": "^4.0.0",
     "uglify-es": "^3.3.7",
     "uglifyify": "^5.0.1",
