--- a/package.json
+++ b/package.json
@@ -68,7 +68,6 @@
     "chai": "^4.2.0",
     "codacy-coverage": "^3.1.0",
     "coveralls": "^3.0.2",
-    "del": "^3.0.0",
     "eslint": "^5.6.1",
     "eslint-config-modular": "^4.2.2",
     "mocha": "^5.2.0",
@@ -76,6 +75,7 @@
     "nyc": "^13.0.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "rimraf-promise": "^2.0.0",
     "typescript": "^3.1.1",
     "version-bump-prompt": "^4.2.1"
   },
