--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,10 @@ os:
 script: npm run lint && npm run coverage
 
 after_success:
+  # FIXME: Travis-CI does not currently support environment variables (i.e. CODACY_PROJECT_TOKEN)
+  #        on Windows. https://github.com/travis-ci/travis-build/pull/1544
   # send code-coverage data to Codacy
-  - cat ./coverage/lcov.info | node_modules/.bin/codacy-coverage -p .
+  #- cat ./coverage/lcov.info | node_modules/.bin/codacy-coverage -p .
 
   # send code-coverage data to Coveralls
   - cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js
