--- a/package.json
+++ b/package.json
@@ -49,11 +49,11 @@
     "browserify": "^16.2.3",
     "browserify-banner": "^1.0.11",
     "browserify-istanbul": "^3.0.1",
-    "commander": "^2.18.0",
+    "commander": "^2.19.0",
     "exorcist": "^1.0.0",
     "globby": "^8.0.1",
     "mkdirp-promise": "^5.0.1",
-    "ono": "^4.0.9",
+    "ono": "^4.0.10",
     "tsify": "^4.0.0",
     "uglify-es": "^3.3.7",
     "uglifyify": "^5.0.1",
@@ -62,21 +62,21 @@
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
-    "@types/react": "^16.4.14",
-    "@types/react-dom": "^16.0.8",
+    "@types/react": "^16.4.18",
+    "@types/react-dom": "^16.0.9",
     "babelify": "^10.0.0",
     "chai": "^4.2.0",
     "codacy-coverage": "^3.1.0",
     "coveralls": "^3.0.2",
-    "eslint": "^5.6.1",
+    "eslint": "^5.7.0",
     "eslint-config-modular": "^4.2.2",
     "mocha": "^5.2.0",
     "npm-check": "^5.9.0",
-    "nyc": "^13.0.1",
+    "nyc": "^13.1.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "rimraf-promise": "^2.0.0",
-    "typescript": "^3.1.1",
+    "rmfr": "^2.0.0",
+    "typescript": "^3.1.3",
     "version-bump-prompt": "^4.2.1"
   },
   "peerDependencies": {
