--- a/package.json
+++ b/package.json
@@ -42,41 +42,41 @@
     "test": "mocha && npm run lint",
     "coverage": "nyc --reporter=text --reporter=lcov mocha",
     "upgrade": "npm-check -u",
-    "bump": "bump --prompt --tag --push --all",
+    "bump": "bump --tag --push --all",
     "release": "npm run upgrade && npm test && npm run bump"
   },
   "dependencies": {
     "browserify": "^16.2.3",
-    "browserify-banner": "^1.0.12",
+    "browserify-banner": "^1.0.13",
     "browserify-istanbul": "^3.0.1",
     "commander": "^2.19.0",
     "exorcist": "^1.0.0",
-    "globby": "^8.0.1",
+    "globby": "^9.1.0",
     "mkdirp-promise": "^5.0.1",
-    "ono": "^4.0.11",
+    "ono": "^5.0.1",
     "tsify": "^4.0.1",
     "uglify-es": "^3.3.7",
     "uglifyify": "^5.0.1",
-    "watchify": "^3.8.0"
+    "watchify": "^3.11.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.0",
-    "@babel/preset-env": "^7.2.0",
-    "@types/react": "^16.7.13",
-    "@types/react-dom": "^16.0.11",
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "@types/react": "^16.8.10",
+    "@types/react-dom": "^16.8.3",
     "babelify": "^10.0.0",
     "chai": "^4.2.0",
-    "coveralls": "^3.0.2",
-    "eslint": "^5.10.0",
-    "eslint-config-modular": "^5.0.0",
-    "mocha": "^5.2.0",
+    "coveralls": "^3.0.3",
+    "eslint": "^5.16.0",
+    "eslint-config-modular": "^7.0.0",
+    "mocha": "^6.0.2",
     "npm-check": "^5.9.0",
-    "nyc": "^13.1.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "nyc": "^13.3.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "rmfr": "^2.0.0",
-    "typescript": "^3.2.2",
-    "version-bump-prompt": "^4.2.1"
+    "typescript": "^3.4.1",
+    "version-bump-prompt": "^5.0.0"
   },
   "peerDependencies": {
     "typescript": "*"
