Changed the website domain name

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "name": "James Messinger",
     "url": "https://jamesmessinger.com"
   },
-  "homepage": "https://jsdevtools.org/simplifyify",
+  "homepage": "https://jstools.dev/simplifyify",
   "repository": {
     "type": "git",
     "url": "https://github.com/JS-DevTools/simplifyify.git"
