--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
   "scripts": {
     "lint": "eslint bin lib test/fixtures test/specs",
     "test": "mocha && npm run lint",
-    "upgrade": "npm-check -u",
     "coverage": "nyc --reporter=text --reporter=lcov node_modules/mocha/bin/mocha",
+    "upgrade": "npm-check -u && npm audit fix",
     "bump": "bump --tag --push --all",
     "release": "npm run upgrade && npm test && npm run bump"
   },
