--- a/package.json
+++ b/package.json
@@ -46,14 +46,15 @@
     "release": "npm run upgrade && npm test && npm run bump"
   },
   "dependencies": {
+    "@jsdevtools/browserify-banner": "^2.0.0",
+    "@jsdevtools/ono": "^7.0.1",
     "browserify": "^16.5.0",
-    "browserify-banner": "^1.0.16",
     "browserify-istanbul": "^3.0.1",
     "commander": "^4.0.1",
     "exorcist": "^1.0.0",
-    "globby": "^10.0.1",
+    "globby": "^11.0.0",
     "mkdirp-promise": "^5.0.1",
-    "ono": "^6.0.0",
+    "shx": "^0.3.2",
     "tsify": "^4.0.1",
     "uglify-es": "^3.3.7",
     "uglifyify": "^5.0.2",
@@ -62,21 +63,20 @@
   "devDependencies": {
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
+    "@jsdevtools/eslint-config-modular": "^8.0.0",
+    "@jsdevtools/version-bump-prompt": "^6.0.0",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "babelify": "^10.0.0",
     "chai": "^4.2.0",
-    "coveralls": "^3.0.9",
     "eslint": "^6.8.0",
-    "eslint-config-modular": "^7.0.1",
-    "mocha": "^6.2.2",
+    "mocha": "^7.0.1",
     "npm-check": "^5.9.0",
     "nyc": "^15.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "rmfr": "^2.0.0",
-    "typescript": "^3.7.4",
-    "version-bump-prompt": "^5.0.7"
+    "typescript": "^3.7.4"
   },
   "peerDependencies": {
     "typescript": "*"
